compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__assignments__assert.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
assertion_line: 16
expression: "fn go(x) { let assert 1 = x }"
---
import { makeError } from "../rakun.mjs";

function go(x) {
  if (x !== 1) {
    throw makeError(
      "let_assert",
      "my/mod",
      1,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  return x;
}
