compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__assignments__assert1.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "fn go(x) { let assert #(1, 2) = x }"
---
----- SOURCE CODE
fn go(x) { let assert #(1, 2) = x }

----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

function go(x) {
  if (x[0] !== 1 || x[1] !== 2) {
    throw makeError(
      "let_assert",
      "my/mod",
      1,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  return x;
}
