compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__assignments__returning_literal_subject.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
expression: "fn go(x) { let assert 1 = x + 1 }"
---
import { makeError } from "../rakun.mjs";

function go(x) {
  let $ = x + 1;
  if ($ !== 1) {
    throw makeError(
      "let_assert",
      "my/mod",
      1,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: $ }
    )
  }
  return $;
}
