compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__assignments__variable_used_in_pattern_and_assignment.snap
---
source: compiler-core/src/javascript/tests/assignments.rs
assertion_line: 129
expression: "pub fn main(x) {\n  let #(x) = #(x)\n  x\n}\n"
---
----- SOURCE CODE
pub fn main(x) {
  let #(x) = #(x)
  x
}


----- COMPILED JAVASCRIPT
export function main(x) {
  let $ = [x];
  let x$1 = $[0];
  return x$1;
}
